+ Comenzando con publicaciones en grupos...

--- a/skyfolk/templates/groups/card-group.html
+++ b/skyfolk/templates/groups/card-group.html
@@ -41,7 +41,7 @@
                             {% else %}
                                 <span id="like-group" class="fa fa-heart group-like" title="¡Me gusta!"></span>
                             {% endif %}
-                            <span class="fa fa-paper-plane group-comment" title="Escribir"></span>
+                            <span id="publish_group" class="fa fa-paper-plane group-comment" title="Escribir"></span>
                         </span>
                     </div>
                 </div>
