--- a/skyfolk/templates/groups/group_profile.html
+++ b/skyfolk/templates/groups/group_profile.html
@@ -1,58 +1,104 @@
 {% extends "groups/base_group.html" %}
 {% block extra-css %}
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/profile.css">
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/comentarios.css">
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/group_profile.css">
-    {% block extra-js %}
-        <script type="text/javascript" src="{{ STATIC_URL }}js/groups.js"></script>
-    {% endblock %}
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/profile.css">
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/comentarios.css">
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/group_profile.css">
 {% endblock %}
 {% block title %} <title> Grupo {{ group_profile.name }}</title> {% endblock %}
 {% block content %}
-    <div class="container">
+<div class="row">
+    <div id="group_form_wrapper" class="col l5 m12 s12 default-div compose-div" style="display:none;">
         <div class="row">
-            <div class="col s12">
-                {% include "groups/card-group.html" %}
+            <div class="col s12 title-page-wrapper">
+                {% if user == user_profile %}
+                <h4><i class="material-icons left">send</i>Publicar comentario</h4>
+                <h6>Publica un comentario para que el mundo lo vea.</h6>
+                {% else %}
+                <h4><i class="material-icons left">send</i> Escribe algo a: {{ user_profile.username }}
+                </h4>
+                <h6>Escribe un mensaje en el tablón de {{ user_profile.username }}.</h6>
+                {% endif %}
             </div>
-            <div class="col s12">
-                {% include "groups/group-menu.html" %}
+        </div>
+        <form id="group_publication" method="post" enctype="multiple/form-data">{% csrf_token %}
+            <div class="row">
+                <div class="row">
+                    <div class="input-field col s12">
+                        <textarea class="materialize-textarea" cols="40" data-length="500" id="group_publication_form"
+                            maxlength="500" name="content" placeholder="Escribe tu mensaje aqui..."
+                            rows="10" required=""></textarea>
+                        <label for="message3">Escribe tu mensaje</label>
+                    </div>
+                </div>
             </div>
-            <div class="col l12 m12 s12">
-                <div class="container">
-                    <div class="col l12 m12 s12">
-                        <div id="div-separator">
-                            <div class="sidebar card" id="tab-container">
-                                <div class="ventana-pin">
-                                    <a><i class="fa fa-times"></i></a>
-                                    <a><i class="fa fa-expand"></i></a>
-                                    <a><i class="fa fa-thumb-tack"></i></a>
-                                </div>
-                                <ul class="unstyled table fullwidth links">
-                                    <li class="tab" id="li-tab-comentarios"><a
-                                            href="#tab-comentarios">Skyline</a></li>
-                                    <li class="tab" id="li-tab-amigos"><a href="#tab-amigos">Usuarios</a></li>
-                                </ul>
-                                <div class="unstyled content" id="hood-tabs">
-                                    {% comment %}
-                                            Incluimos el tab comentarios
-                                        {% endcomment %}
-                                    <div id="tab-comentarios">
-                                        {% if publications|length == 0 %}
-                                            <!-- Si el usuario no tiene comentarios, proponemos uno -->
-                                            <div class="no-comments" id="without-comments">
-                                                <span class="no-comments-text-info">¡{{ group_profile.name }} no tiene comentarios!</span>
-                                                <a id="compose-new-no-comments" class="no-comments-new-comment">
-                                                    <i class="fa fa-paper-plane fa-lg"></i>
-                                                </a>
-                                            </div>
-                                        {% endif %}
-                                        {% include "groups/comentarios_entries.html" %}
+            <input name="author" type="hidden" value="{{ request.user.id }}">
+            <input id="board_group" name="board_owner" type="hidden" value="{{ group_profile.id }}">
+            <div class="row">
+                <div class="col s12">
+                    <button type="submit" id="send_group_publication"
+                        class="waves-effect waves-light btn right blue">
+                        Enviar<i class="material-icons right">send</i></button>
+                    <button type="button"
+                        class="waves-effect waves-light btn right transparent black-text close">Cerrar<i
+                            class="material-icons right">close</i></button>
+                    <div class="file-field">
+                        <div class="btn blue lighten-2">
+                            <span><i class="fa fa-camera" aria-hidden="true"></i></span>
+                            <input name="image" type="file" multiple>
+                        </div>
+                        <div class="file-path-wrapper">
+                            <input class="file-path validate" type="text"
+                            placeholder="Subir imágenes o videos">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col s12">
+            {% include "groups/card-group.html" %}
+        </div>
+        <div class="col s12">
+            {% include "groups/group-menu.html" %}
+        </div>
+        <div class="col l12 m12 s12">
+            <div class="container">
+                <div class="col l12 m12 s12">
+                    <div id="div-separator">
+                        <div class="sidebar card" id="tab-container">
+                            <div class="ventana-pin">
+                                <a><i class="fa fa-times"></i></a>
+                                <a><i class="fa fa-expand"></i></a>
+                                <a><i class="fa fa-thumb-tack"></i></a>
+                            </div>
+                            <ul class="unstyled table fullwidth links">
+                                <li class="tab" id="li-tab-comentarios"><a
+                                        href="#tab-comentarios">Skyline</a></li>
+                                <li class="tab" id="li-tab-amigos"><a href="#tab-amigos">Usuarios</a></li>
+                            </ul>
+                            <div class="unstyled content" id="hood-tabs">
+                                {% comment %}
+                                Incluimos el tab comentarios
+                                {% endcomment %}
+                                <div id="tab-comentarios">
+                                    {% if publications|length == 0 %}
+                                    <!-- Si el usuario no tiene comentarios, proponemos uno -->
+                                    <div class="no-comments" id="without-comments">
+                                        <span class="no-comments-text-info">¡{{ group_profile.name }} no tiene comentarios!</span>
+                                        <a id="compose-new-no-comments" class="no-comments-new-comment">
+                                            <i class="fa fa-paper-plane fa-lg"></i>
+                                        </a>
                                     </div>
-                                    {% comment %}
-                                        Incluimos el tab amigos
-                                    {% endcomment %}
-                                    {% include "groups/tab-usuarios.html" %}
+                                    {% endif %}
+                                    {% include "groups/comentarios_entries.html" %}
                                 </div>
+                                {% comment %}
+                                Incluimos el tab amigos
+                                {% endcomment %}
+                                {% include "groups/tab-usuarios.html" %}
                             </div>
                         </div>
                     </div>
@@ -60,24 +106,20 @@
             </div>
         </div>
     </div>
-    <script src="{{ STATIC_URL }}js/jquery.easytabs.js" type="text/javascript"></script>
-    <script src="{{ STATIC_URL }}js/jquery.hashchange.min.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        $('#tab-container').easytabs({
+    <form id="group_form" method="post" enctype="multiple/form-data">{% csrf_token %}
+        {{ publication_group_form }}
+        <input type="submit" value="ENTER">
+    </form>
+</div>
+<script src="{{ STATIC_URL }}js/jquery.easytabs.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/jquery.hashchange.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+    $('#tab-container').easytabs({
             defaultTab: "#li-tab-comentarios",
             animate: true,
             animationSpeed: "fast",
             updateHash: false
         });
-    </script>
-    {% block js %}
-        {{ block.super }}
-        <script src="{{ STATIC_URL }}js/el-pagination.js"></script>
-        <script>
-            $.endlessPaginate({
-                paginateOnScroll: true,
-                paginateOnScrollMargin: 20,
-            });
-        </script>
-    {% endblock %}
+</script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/groups.js"></script>
 {% endblock %}
