--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -54,7 +54,7 @@
                 <div class="col l2 m12 s12">
                     <div class="notice-item">
                         <div class="col l3 m2 s3 img">
-                            {% avatar fav.username %}
+                            {% avatar fav %}
                         </div>
                         <div class="col l8 m9 s8 author">
                             <a href="/profile/{{ fav.username }}">@{{ fav.username }}</a><i>{{ fav.first_name }} {{ fav.last_name }}</i>
