--- a/skyfolk/templates/groups/group_profile.html
+++ b/skyfolk/templates/groups/group_profile.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <input name="author" type="hidden" value="{{ request.user.id }}">
-            <input id="board_group" name="board_owner" type="hidden" value="{{ group_profile.id }}">
+            <input id="board_group" name="board_group" type="hidden" value="{{ group_profile.id }}">
             <div class="row">
                 <div class="col s12">
                     <button type="submit" id="send_group_publication"
@@ -105,11 +105,7 @@
                 </div>
             </div>
         </div>
-    </div>
-    <form id="group_form" method="post" enctype="multiple/form-data">{% csrf_token %}
-        {{ publication_group_form }}
-        <input type="submit" value="ENTER">
-    </form>
+    </div> 
 </div>
 <script src="{{ STATIC_URL }}js/jquery.easytabs.js" type="text/javascript"></script>
 <script src="{{ STATIC_URL }}js/jquery.hashchange.min.js" type="text/javascript"></script>
