--- a/skyfolk/templates/account/welcomestep1.html
+++ b/skyfolk/templates/account/welcomestep1.html
@@ -1,6 +1,7 @@
 {% extends 'account/nuevosusuarios.html' %}
 <!-- Extendemos la base de "nuevosusuarios.html" -->
 {% load humanize %}
+{% load app_filters %}
 {% block title %}
     <title>¡Bienvenido a Skyfolk! - Paso 1 ({{ user }})</title>
 {% endblock %}
@@ -32,8 +33,7 @@
                     <div class="col s12 m12 l4">
                         <div class="card white">
                             <div class="card-content">
-							<span class="card-title grey-text darken-1"><i
-                                    class="fa fa-paint-brush"></i> {{ choice.choice_label }}</span>
+                                <span class="card-title grey-text darken-1">{{ choice.choice_value|interest_to_icon|safe }} {{ choice.choice_label }}</span>
                             </div>
                             <div class="card-action">
                                 <p>
