--- a/skyfolk/templates/account/privacity/block_profile.html
+++ b/skyfolk/templates/account/privacity/block_profile.html
@@ -1,6 +1,73 @@
-{% extends 'account/privacity/base_privacity.html' %}
-{% block title %} <title> Perfil de {{ user_profile.username }}</title>{% endblock %}
-{% block content-text %}
-    <h1>No puedes seguir ni ver el contenido de <strong>{{ user_profile.username }}</strong> porque te ha bloqueado.
+{% extends "account/base_interface.html" %}
+{% comment %}
+  Template para el perfil de cada usuario
+{% endcomment %}
+{% load app_filters %}
+{% load avatar_tags %}
+{% block title %} <title> Perfil de {{ user_profile.username }}</title> {% endblock %}
+{% block include_files %}
+    <style type="text/css">
+        .title-wrapper {
+            display: block;
+            clear: both;
+            width: 100%;
+            background-color: #fafafa;
+            box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+            padding: 10px;
+            margin-top: 10%;
+            border-radius: 3px;
+        }
+
+        .title-wrapper h1 {
+            text-align: center;
+            font-size: 1.6em;
+        }
+
+        .title-wrapper h1 strong {
+            font-weight: 600;
+        }
+    </style>
+
+{% endblock %}
+
+{% block extra-js %}
+
+{% endblock %}
+
+{% block extra-css %}
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/profile.css" onload="if(media!='all')media='all'">
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/comentarios.css"
+          onload="if(media!='all')media='all'">
+    {% if liked == True %}
+        <style type="text/css">
+            #ilike_profile {
+                color: #ec407a;
+            }
+        </style>
+    {% endif %}
+{% endblock %}
+
+{% block content %}
+    <script async src="{{ STATIC_URL }}js/profile.js" type="text/javascript"></script>
+
+    <div class="container">
+        {% if user_profile.is_active %}
+            <div class="col-lg-8 col-md-6 col-sm-12">
+                <!-- Contenedor principal, engloba el tablon, widgets... [IMPORTANTE]-->
+                <div class="container">
+                    <!-- Para el diseño de la rama develop, se cambia col-md-6 por col-md-12 -->
+                    {% comment %} CARD USUARIO - FOTO PERFIL ETC...  {% endcomment %}
+                    {% include "account/card-user.html" %}
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <div class="title-wrapper">
+                            <h1>No puedes seguir ni ver el contenido de <strong>{{ user_profile.username }}</strong> porque te ha bloqueado.
     </h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        {% else %}
+            <h1 class="account-disabled">Cuenta desactivada.</h1>
+        {% endif %}
 {% endblock %}
