--- a/skyfolk/templates/search/search.html
+++ b/skyfolk/templates/search/search.html
@@ -9,82 +9,16 @@ Template para las busquedas
 {% block title %} <title>Búsqueda en Skyfolk.</title> {% endblock %}
 {% block include_files %}
 <link rel="stylesheet" href="{{ STATIC_URL }}css/gallery.css">
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/news.css"/>
 <!-- Estilos para la galeria de fotos -->
 <style>
-    .notice-item {
-        box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
-        border-radius: 7px;
-        margin-top: 5%;
-        overflow: hidden;
+    .grid {
+        margin: 0 auto;
     }
-
-    .notice-item .img {
-        border-radius: 7px;
-        box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
-    }
-
-    .notice-item .img img {
-        width: 100%;
-        height: 100%;
-    }
-
-    .notice-item .contenido {
-        margin-top: 2.5%;
-        margin-bottom: 1.5%;
-        word-wrap: break-word;
-        line-height: 1.5rem;
-    }
-
-    .notice-item .author {
-        display: block;
-        margin-top: 1.25%;
-    }
-
-    .notice-item .author a {
-        text-decoration: none;
-        color: #1e88e5;
-        font-weight: 600;
-        margin-right: 2%;
-    }
-
-    .notice-item .author i {
-        color: gray;
-    }
-
-    .notice-item .pub-date {
-        margin-top: 2%;
-        display: block;
-    }
-    .highlighted {
-        font-weight: bold;
-        background-color: rgba(30, 136, 229, 0.5);
-        padding: 3px;
-    }
-    .publication-div {
-        margin-bottom: 2.5%;
-    }
-    .flow-columns {
-        column-width: 320px;
-        column-gap: 15px;
-        width: 90%;
-        max-width: 1140px;
-    }
-    .flow-columns .item {
-        margin: 0 2px 15px;
-        padding: 15px;
-        padding-bottom: 10px;
-        display: inline-block;
-        -webkit-column-break-inside: avoid;
-        page-break-inside: avoid;
-        break-inside: avoid;
-    }
-    @media screen and (max-width: 750px) { 
-        .flow-columns { column-gap: 0px; }
-        .flow-columns .item { width: 100%; }
-        .flow-columns .image-div { width: 100%; }
-    }
-    .flow-columns .image-div {
-        max-width: 320px;
+    .grid-item {
+        width: 300px;
+        margin-bottom: 10px;
+        float: left;
     }
 </style>
 {% endblock %}
@@ -126,10 +60,10 @@ Template para las busquedas
     </div>
     {% endif %}
     {% if s == 'all' %}
-    <div class="row flow-columns">
+    <div class="grid">
         {% for item in object_list %}
         {% if item.model_name == 'profile' %}
-        <div class="item">
+        <div class="grid-item">
             <div class="personal-card">
                 <div class="header">
                     {% if item.object.back_image %}
@@ -153,9 +87,9 @@ Template para las busquedas
             </div>
         </div>
         {% elif item.model_name == 'publication' %}
-        <div class="item">
-            <div class="col s12" style="box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);">
-                <div class="col s3" style="padding: 10px">
+        <div class="grid-item">
+            <div class="notice-item" style="box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);">
+                <div class="col s3 img">
                     {% avatar item.object.author 50 %}
                 </div>
                 <div class="col s9">
@@ -176,7 +110,7 @@ Template para las busquedas
             </div>
         </div>
         {% elif item.model_name == 'photo' %}
-        <div class="item image-div tooltipped" data-position="bottom" data-delay="50" data-tooltip="{{ item.description|truncatechars:"150" }}">
+        <div class="grid-item image-div tooltipped" data-position="bottom" data-delay="50" data-tooltip="{{ item.description|truncatechars:"150" }}">
             <div class="container-image">
                 <div class="principal-content">
                     {% if item.object.tags.all %}
@@ -349,6 +283,19 @@ Template para las busquedas
     {% endif %}
     </div>
 </div>
-<script async src="{{ STATIC_URL }}js/search.js"></script>
-<script async src="{{ STATIC_URL }}js/photo_gallery.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/search.js"></script>
+<script src="{{ STATIC_URL }}js/photo_gallery.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/masonry.pkgd.min.js"></script>
+        <script src="{{ STATIC_URL }}js/imagesloaded.pkgd.min.js"></script> 
+        <script>
+            var $grid = $('.grid').masonry({
+                itemSelector: '.grid-item',
+                columnWidth: 300,
+                gutter: 10,
+                fitWidth: true
+            });
+            $grid.imagesLoaded().progress( function() {
+                $grid.masonry('layout');
+            })
+        </script>
 {% endblock %}
