--- a/skyfolk/templates/account/base_search.html
+++ b/skyfolk/templates/account/base_search.html
@@ -5,9 +5,9 @@
 {% load app_filters %}
 {% block title %} <title>Buscar contactos</title> {% endblock %}
 {% block extra-css %}
-    <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/amigos.css" onload="if(media!='all')media='all'">
-    <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/search_advanced.css"
-          onload="if(media!='all')media='all'">
+    <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/amigos.css">
+    <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/search_advanced.css">
+    <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/news.css">
 {% endblock %}
 
 {% block content %}
