--- a/skyfolk/static/css/core.css
+++ b/skyfolk/static/css/core.css
@@ -78,6 +78,9 @@ table {
     margin-right: 7px;
     box-shadow: 0 1px 5px #64b5f6; }
 
+.collection .collection-item {
+  height: auto; }
+
 .container {
   *zoom: 1;
   max-width: 100%;
