--- a/skyfolk/templates/account/notification-right-menu.html
+++ b/skyfolk/templates/account/notification-right-menu.html
@@ -5,71 +5,84 @@ Menu de notificaciones verticales
 {% load avatar_tags %}
 {% load compress %}
 {% compress js %}
-    <script src="{{ STATIC_URL }}js/reconnecting-websocket.min.js"></script>
-    <script src="{{ STATIC_URL }}js/socket_notifications.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}js/reconnecting-websocket.min.js"></script>
+<script src="{{ STATIC_URL }}js/socket_notifications.js" type="text/javascript"></script>
 {% endcompress %}
-    <script>
-        UTILS_N.init([{{ user.pk }}]);
-        UTILS_N.conn_socket();
-    </script>
+<script>
+    UTILS_N.init([{{ user.pk }}]);
+UTILS_N.conn_socket();
+</script>
 <!-- MENU VERTICAL CON NOTIFICACIONES  -->
 <div id="notification-menu" class="side-nav nav-vertical-and-chat">
     <ul id="list-notify" class="collection">
         {% if user_notifications %}
-            {% for notification in user_notifications %}
-                <li class="collection-item avatar" data-id="{{ notification.id }}">
-                    <a onclick="AJAX_mark_read(this)" class="fa fa-remove"
-                       data-notification="{{ notification.slug }}"></a>
-                    <div class="circle">
-                        {% avatar notification.actor %}
-                    </div>
-                    {% if notification.level != "new_follow" %}
-                        De: <a class="title" href="/profile/{{ notification.actor }}">{{ notification.actor }}</a>
-                    {% endif %}
-                    <span class="title">{{ notification.verb|safe }} {% if notification.description %}
-                        {{ notification.description|safe }} {% endif %}</span>
-                    <p><i>{{ notification.timestamp|naturaltime }}</i></p>
-                    {% if notification.level == "friendrequest" %}
-                        <div class="notification-buttons">
-                            <button data-notification="{{ notification.slug }}"
-                                    class="accept-response waves-effect waves-light btn white-text green"
-                                    onclick="AJAX_respondFriendRequest({{ notification.actor_object_id }}, 'accept', {{ notification.id }})">
-                            <i class="material-icons">done</i>
-                            </button>
-                            <button data-notification="{{ notification.slug }}"
-                                    class="rejected-response waves-effect waves-light btn white-text red"
-                                    onclick="AJAX_respondFriendRequest({{ notification.actor_object_id }}, 'rejected', {{ notification.id }})">
-                            <i class="material-icons">cancel</i>
-                            </button>
-                        </div>
-                    {% endif %}
-                    {% comment %}
-                    {% if notification.level == "message" %}
-                    <a href="#!" class="secondary-content">
-                        <i class="material-icons">email</i>
-                    </a>
-                    {% elif notification.level == "pub" %}
-                    <a href="#!" class="secondary-content">
-                        <i class="material-icons">people</i>
-                    </a>
-                    {% endif %}
-                    {% endcomment %}
-                </li>
-            {% endfor %}
+        {% for notification in user_notifications %}
+        <li class="collection-item avatar" data-id="{{ notification.id }}">
+            <a onclick="AJAX_mark_read(this)" class="fa fa-remove"
+                data-notification="{{ notification.slug }}"></a>
+            <div class="circle">
+                {% avatar notification.actor %}
+            </div>
+            {% if notification.level != "new_follow" %}
+            De: <a class="title" href="/profile/{{ notification.actor }}">{{ notification.actor }}</a>
+            {% endif %}
+            <span class="title">{{ notification.verb|safe }} {% if notification.description %}
+                {{ notification.description|safe }} {% endif %}</span>
+            <p><i>{{ notification.timestamp|naturaltime }}</i></p>
+            {% if notification.level == "friendrequest" %}
+            <div class="notification-buttons">
+                <button data-notification="{{ notification.slug }}"
+                    class="accept-response waves-effect waves-light btn white-text green"
+                    onclick="AJAX_respondFriendRequest({{ notification.actor_object_id }}, 'accept', {{ notification.id }})">
+                    <i class="material-icons">done</i>
+                </button>
+                <button data-notification="{{ notification.slug }}"
+                    class="rejected-response waves-effect waves-light btn white-text red"
+                    onclick="AJAX_respondFriendRequest({{ notification.actor_object_id }}, 'rejected', {{ notification.id }})">
+                    <i class="material-icons">cancel</i>
+                </button>
+            </div>
+            {% elif notification.level == "grouprequest" %}
+            <div class="notification-buttons">
+                <button data-notification="{{ notification.slug }}"
+                    class="accept-response waves-effect waves-light btn white-text green"
+                    onclick="AJAX_respondGroupRequest({{ notification.action_object_object_id }}, 'accept', {{ notification.id }})">
+                    <i class="material-icons">done</i>
+                </button>
+                <button data-notification="{{ notification.slug }}"
+                    class="rejected-response waves-effect waves-light btn white-text red"
+                    onclick="AJAX_respondGroupRequest({{ notification.action_object_object_id }}, 'rejected', {{ notification.id }})">
+                    <i class="material-icons">cancel</i>
+                </button>
+            </div>
+            {% endif %}
+            {% comment %}
+            {% if notification.level == "message" %}
+            <a href="#!" class="secondary-content">
+                <i class="material-icons">email</i>
+            </a>
+            {% elif notification.level == "pub" %}
+            <a href="#!" class="secondary-content">
+                <i class="material-icons">people</i>
+            </a>
+            {% endif %}
+            {% endcomment %}
+        </li>
+        {% endfor %}
         {% endif %}
     </ul>
     {% if user_notifications|length < 5 %}
-        <div class="nav-vertical-controls" style="position: absolute !important;">
-            <div class="divider"></div>
-            <div class="controls-notifications" style="margin-top: 5% !important;">
-    {% endif %}
-                {% if user_notifications %}
-                <a id="clear-notify"
-                   class="waves-effect waves-light btn white-text blue darken-1 nav-button-notifications">Limpiar</a>
+    <div class="nav-vertical-controls" style="position: absolute !important;">
+        <div class="divider"></div>
+        <div class="controls-notifications" style="margin-top: 5% !important;">
+            {% endif %}
+            {% if user_notifications %}
+            <a id="clear-notify"
+                class="waves-effect waves-light btn white-text blue darken-1 nav-button-notifications">Limpiar</a>
 
-                {% endif %}
-                <a href="/inbox/notifications/"
-                   class="waves-effect waves-light btn white-text blue darken-1 nav-button-notifications">Todas</a>
-            </div>
+            {% endif %}
+            <a href="/inbox/notifications/"
+                class="waves-effect waves-light btn white-text blue darken-1 nav-button-notifications">Todas</a>
         </div>
+    </div>
 </div>
