--- a/skyfolk/templates/account/new_reply_extend_publication.html
+++ b/skyfolk/templates/account/new_reply_extend_publication.html
@@ -6,7 +6,7 @@ Nueva respuesta a una publicacion
     <form class="reply-form" method="post">{% csrf_token %}
         <input name="author" type="hidden" value="{{ request.user.id }}">
         <input name="board_owner" type="hidden" value="{{ node.board_owner.id }}">
-        <input name="parent" type="hidden">
+        <input name="parent" type="hidden" value="{{ node.id }}">
         <div class="row">
             <div class="col s12">
                 <div class="row">
