--- a/skyfolk/templates/groups/new_reply.html
+++ b/skyfolk/templates/groups/new_reply.html
@@ -1,8 +1,10 @@
+{% comment %}
+Nueva respuesta a una publicacion
+{% endcomment %}
 <div class="hidden" id="caja-comentario-{{ node.pk }}">
-    <!-- REPLY FORM -->
     <form class="reply-form" method="post">{% csrf_token %}
-        <input name="p_author" type="hidden" value="{{ request.user.id }}">
-        <input name="board_photo" type="hidden" value="{{ photo.id }}">
+        <input name="author" type="hidden" value="{{ request.user.id }}">
+        <input name="board_group" type="hidden" value="{{ group_profile.group_ptr_id }}">
         <input name="parent" type="hidden" value="{{ node.id }}">
         <div class="row">
             <div class="col s12">
@@ -10,7 +12,7 @@
                     <div class="input-field col s12">
                         <textarea class="materialize-textarea message-reply" id="message-reply-{{ node.pk }}" cols="40"
                                   maxlength="500" name="content"
-                                  placeholder="Responder a @{{ node.p_author }}" rows="10" required=""></textarea>
+                                  placeholder="Responder a @{{ node.author }}" rows="10" required=""></textarea>
                         <label for="message-reply-{{ node.pk }}">Escribe tu mensaje aqui...</label>
                     </div>
                     <div class="file-field input-field col s12">
@@ -25,7 +27,7 @@
                 </div>
             </div>
         </div>
-        <button type="button" id="reply-{{ node.pk }}" class="waves-effect waves-light btn right blue enviar">Enviar<i
+        <button type="button" id="reply-{{ node.pk }}" class="waves-effect waves-light btn right blue group_reply">Enviar<i
                 class="material-icons right">send</i></button>
     </form>
 </div>
